Add color,text,size and styles

--- a/index.html
+++ b/index.html
@@ -5,81 +5,86 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bosh sahifa - Akademnashr promo sayt</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class="site-header">
     <nav>
       <a href="index.html">
         <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
 
       </a>
-      <ul>
-        <li><a href="index.html">Bosh sahifa</a></li>
-        <li><a href="#">Kitoblar</a></li>
-        <li><a href="#">Aksiyalar</a></li>
-        <li><a href="#">Kontaktlar</a></li>
+      <ul class="footer-list">
+        <li><a class="site-nav" href="index.html">Bosh sahifa</a></li>
+        <li><a class="site-nav" href="#">Kitoblar</a></li>
+        <li><a class="site-nav" href="#">Aksiyalar</a></li>
+        <li><a class="site-nav" href="#">Kontaktlar</a></li>
       </ul>
     </nav>
-    <a href="#">Ro'yhatdan o'tish</a>
+    <a class="txt-buyurtma" href="#">Ro'yhatdan o'tish</a>
   </header>
 
 
   <main>
-    <section>
-      <div>
-        <hr>
-        <h2>Pythonda dasturlash<br>asoslari</h2>
-        <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-        <a href="#">Buyurtma berish</a>
+    <section class="first-back">
+      <div class="main-content">
+        <hr class="hero-hr">
+        <h2 class="first">Pythonda dasturlash<br>asoslari</h2>
+        <p class="txt-ikki">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+        <a href="#" class="txt-buyurtma">Buyurtma berish</a>
       </div>
-      <img src="img/python-book.jpg" alt="Python book" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
+      <img class="her-img" src="img/python-book.jpg" alt="Python book" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
     </section>
 
     <section>
-      <hr>
-      <h2>Nega aynan<br>Akademnashr?</h2>
-      <ul>
-        <img src="img/Icon-cursor.svg" alt="Icon strelka" width="56" height="56">
-        <li>
-          <h3>Oson buyurtma qilish</h3>
-          <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+      <hr class="hero-hr">
+      <h2 class="txt-savol">Nega aynan<br>Akademnashr?</h2>
+      <ul class="footer-list">
+        <li class="feature">
+          <div class="feature-icon-wrapper"><img src="img/Icon-cursor.svg" alt="Icon strelka" width="56" height="56"></div>
+          <h3 class="txt-small">Oson buyurtma qilish</h3>
+          <p class="txt-izoh">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
         </li>
-        <img src="img/Iconstar.svg" alt="Icon star" width="56" height="56">
-        <li>
-          <h3>Eng sara kitoblar</h3>
-          <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+
+        <li class="feature">
+          <div class="feature-icon-wrapper"><img src="img/Iconstar.svg" alt="Icon star" width="56" height="56"></div>
+          <h3 class="txt-small">Eng sara kitoblar</h3>
+          <p class="txt-izoh">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
         </li>
-        <img src="img/Icon-3.svg" alt="Icon 3" width="56" height="56">
-        <li>
-          <h3>Tez yetkazib berish</h3>
-          <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+
+        <li class="feature">
+          <div class="feature-icon-wrapper"><img src="img/Icon-3.svg" alt="Icon 3" width="56" height="56"></div>
+          <h3 class="txt-small">Tez yetkazib berish</h3>
+          <p class="txt-izoh">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
         </li>
       </ul>
     </section>
 
-    <section>
-      <div>
-        <h2>Bolalar kitoblari uchun<br>ajoyib aksiya!</h2>
-        <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-        <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming so’m</strong>ga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
-        <a href="#">Buyurtma berish</a>
+    <section class="second-back">
+      <div class="promo-content">
+        <h2 class="third-sec">Bolalar kitoblari uchun<br>ajoyib aksiya!</h2>
+        <p class="txt-third-p">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+        <p class="txt-third-p">Aksiyadagi eng katta to’plamda <strong class="promo-highlite
+          promo-highlite" >50 ta kitob</strong>ni <strong class="promo-highlite
+          promo-highlite" >350 ming so’m</strong>ga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+        <a href="#" class="txt-buyurtma">Buyurtma berish</a>
       </div>
-      <img src="img/sale-img.jpg" alt="Books" width="440" height="440" srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
+      <img class="img-book" src="img/sale-img.jpg" alt="Books" width="440" height="440" srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
     </section>
 
   </main>
 
 
 
-  <footer>
+  <footer class="site-footer">
     <div>
       <a href="index.html">
         <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
       </a>
-      <ul>
+      <ul class="footer-list">
         <li>
 
-          <a href="https://t.me/Akademnashr" target="_blank">
+          <a href="https://t.me/Akademnashr" target="_blank" class="bg-tg">
             <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0Zm5.568 8.16c-.18 1.896-.96 6.504-1.356 8.628-.168.9-.504 1.2-.816 1.236-.696.06-1.224-.456-1.896-.9-1.056-.696-1.656-1.128-2.676-1.8-1.188-.78-.42-1.212.264-1.908.18-.18 3.252-2.976 3.312-3.228a.24.24 0 0 0-.06-.216c-.072-.06-.168-.036-.252-.024-.108.024-1.788 1.14-5.064 3.348-.48.324-.912.492-1.296.48-.432-.012-1.248-.24-1.86-.444-.756-.24-1.344-.372-1.296-.792.024-.216.324-.432.888-.66 3.504-1.524 5.832-2.532 6.996-3.012 3.336-1.392 4.02-1.632 4.476-1.632.096 0 .324.024.468.144.12.096.156.228.168.324-.012.072.012.288 0 .456Z" fill="#252420"/></svg>
           </a>
           <li>
@@ -93,33 +98,35 @@
             </li>
           </ul>
         </div>
-        <hr>
+        <hr class="footer-hr">
         <div>
-          <ul>
-            <li><a href="#">Bosh sahifa</a></li>
-            <li><a href="#">Kitoblar</a></li>
-            <li><a href="#">Aksiyalar</a></li>
-            <li><a href="#">Kontaktlar</a></li>
+          <ul class="footer-list">
+            <li><a class="txt-last" href="#">Bosh sahifa</a></li>
+            <li><a class="txt-last" href="#">Kitoblar</a></li>
+            <li><a class="txt-last" href="#">Aksiyalar</a></li>
+            <li><a class="txt-last" href="#">Kontaktlar</a></li>
           </ul>
-          <ul>
-            <li><a href="#">Ilmiy nashrlar</a></li>
-            <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
-            <li><a href="#">Ma’rifiy nashrlar</a></li>
-            <li><a href="#">Lug’atlar</a></li>
-            <li><a href="#">Adabiy-badiiy nashrlar</a></li>
-            <li><a href="#">Abituriyentlar uchun</a></li>
-            <li><a href="#">Bolalar uchun</a></li>
+          <div>
+          <ul class="footer-list">
+            <li><a class="txt-last" href="#">Ilmiy nashrlar</a></li>
+            <li><a class="txt-last" href="#">Ilmiy-ommabop nashrlar</a></li>
+            <li><a class="txt-last" href="#">Ma’rifiy nashrlar</a></li>
+            <li><a class="txt-last" href="#">Lug’atlar</a></li>
+            <li><a class="txt-last" href="#">Adabiy-badiiy nashrlar</a></li>
+            <li><a class="txt-last" href="#">Abituriyentlar uchun</a></li>
+            <li><a class="txt-last" href="#">Bolalar uchun</a></li>
           </ul>
-          <ul>
-            <li><a href="#">Ko’p so’raladigan savollar</a></li>
-            <li><a href="#">Yetkazib berish haqida</a></li>
-            <li><a href="#">To’lov usullari haqida</a></li>
+          <ul class="footer-list">
+            <li><a class="txt-last"href="#">Ko’p so’raladigan savollar</a></li>
+            <li><a class="txt-last"href="#">Yetkazib berish haqida</a></li>
+            <li><a class="txt-last"href="#">To’lov usullari haqida</a></li>
           </ul>
-          <ul>
-            <li><a href="#">Bo’sh ish o’rinlari</a></li>
-            <li><a href="#">Biz bilan bog’lanish</a></li>
-            <li><a href="#">Maxfiylik nizomi</a></li>
+          <ul class="footer-list">
+            <li><a class="txt-last" href="#">Bo’sh ish o’rinlari</a></li>
+            <li><a class="txt-last" href="#">Biz bilan bog’lanish</a></li>
+            <li><a class="txt-last" href="#">Maxfiylik nizomi</a></li>
           </ul>
+        </div>
         </div>
 
       </footer>
