--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 </head>
 <body>
   <header class="site-header">
-    <nav>
       <a href="index.html">
-        <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
-
-      </a>
-      <ul class="footer-list">
-        <li><a class="site-nav" href="index.html">Bosh sahifa</a></li>
-        <li><a class="site-nav" href="#">Kitoblar</a></li>
-        <li><a class="site-nav" href="#">Aksiyalar</a></li>
-        <li><a class="site-nav" href="#">Kontaktlar</a></li>
-      </ul>
-    </nav>
-    <a class="txt-buyurtma" href="#">Ro'yhatdan o'tish</a>
+        <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60"> </a>
+    <div class="site-header-actions">
+      <nav>
+        <ul class="footer-list">
+          <li><a class="site-nav" href="index.html">Bosh sahifa</a></li>
+          <li><a class="site-nav" href="#">Kitoblar</a></li>
+          <li><a class="site-nav" href="#">Aksiyalar</a></li>
+          <li><a class="site-nav" href="#">Kontaktlar</a></li>
+        </ul>
+      </nav>
+      <a class="txt-buyurtma" href="#">Ro'yhatdan o'tish</a>
+    </div>
   </header>
 
 
@@ -44,7 +44,7 @@
     <section>
       <hr class="hero-hr">
       <h2 class="txt-savol">Nega aynan<br>Akademnashr?</h2>
-      <ul class="footer-list">
+      <ul class="hero-list">
         <li class="feature">
           <div class="feature-icon-wrapper"><img src="img/Icon-cursor.svg" alt="Icon strelka" width="56" height="56"></div>
           <h3 class="txt-small">Oson buyurtma qilish</h3>
@@ -82,11 +82,11 @@
 
 
   <footer class="site-footer">
-    <div>
+    <div class="footer-img-list">
       <a href="index.html">
         <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
       </a>
-      <ul class="footer-list">
+      <ul class="end-list">
         <li>
 
           <a href="https://t.me/Akademnashr" target="_blank" class="bg-tg">
@@ -104,15 +104,15 @@
           </ul>
         </div>
         <hr class="footer-hr">
-        <div>
-          <ul class="footer-list">
+        <div class="the-end-list">
+          <ul class="oxirgi-list">
             <li><a class="txt-last" href="#">Bosh sahifa</a></li>
             <li><a class="txt-last" href="#">Kitoblar</a></li>
             <li><a class="txt-last" href="#">Aksiyalar</a></li>
+            <li><a class="txt-last" href="#">Yangiliklar</a></li>
             <li><a class="txt-last" href="#">Kontaktlar</a></li>
           </ul>
-          <div>
-          <ul class="footer-list">
+          <ul class="oxirgi-list">
             <li><a class="txt-last" href="#">Ilmiy nashrlar</a></li>
             <li><a class="txt-last" href="#">Ilmiy-ommabop nashrlar</a></li>
             <li><a class="txt-last" href="#">Ma’rifiy nashrlar</a></li>
@@ -121,18 +121,18 @@
             <li><a class="txt-last" href="#">Abituriyentlar uchun</a></li>
             <li><a class="txt-last" href="#">Bolalar uchun</a></li>
           </ul>
-          <ul class="footer-list">
+          <ul class="oxirgi-list">
             <li><a class="txt-last"href="#">Ko’p so’raladigan savollar</a></li>
             <li><a class="txt-last"href="#">Yetkazib berish haqida</a></li>
             <li><a class="txt-last"href="#">To’lov usullari haqida</a></li>
           </ul>
-          <ul class="footer-list">
+          <ul class="oxirgi-list">
             <li><a class="txt-last" href="#">Bo’sh ish o’rinlari</a></li>
             <li><a class="txt-last" href="#">Biz bilan bog’lanish</a></li>
             <li><a class="txt-last" href="#">Maxfiylik nizomi</a></li>
           </ul>
         </div>
-        </div>
+
 
       </footer>
 
