--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
           <p class="txt-ikki">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
           <a href="#" class="txt-buyurtma">Buyurtma berish</a>
         </div>
-        <img class="her-img" src="img/python-book.jpg" alt="Python book" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
+        <img class="hero-img" src="img/python-book.jpg" alt="Python book" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
       </section>
 
-      <section>
+      <section class="features-main">
         <hr class="hero-hr">
         <h2 class="txt-savol">Nega aynan<br>Akademnashr?</h2>
         <ul class="hero-list">
