Remove unnessesary spaces

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li class="sitenav-item"><a class="site-nav" href="#">Kontaktlar</a></li>
           </ul>
         </nav>
-        <a class="txt-buyurtma" href="#">Ro'yhatdan o'tish</a>
+        <a class="txt-buyurtma" href="https://akademnashr.uz/register/?noPurchase=1" target="_blank">Ro'yhatdan o'tish</a>
       </div>
     </header>
 
